made pictures into vectors for the slide image bar

--- a/index.html
+++ b/index.html
@@ -30,26 +30,30 @@
         <div class="slider">
             <div class="wrapper">
                 <div class="slide">
-                    <img>
+                    <img src="./media/vectors/beet9.png" >
                 </div>
                 <div class="slide">
-                    <img>
+                    <img src="./media/vectors/beet8.png">
                 </div>
                 <div class="slide">
-                    <img>
+                    <img src="./media/vectors/beet7.png">
                 </div>
                 <div class="slide">
-                    <img>
+                    <img src="./media/vectors/beet6.png">
                 </div>
                 <div class="slide">
-                    <img>
+                    <img src="./media/vectors/beet5.png">
                 </div>
                 <div class="slide">
-                    <img>
+                    <img src="./media/vectors/beet4.png">
                 </div>
                 <div class="slide">
-                    <img>
+                    <img src="./media/vectors/beet3.png">
                 </div>
+                <div class="slide">
+                    <img src="./media/vectors/beet2.png">
+                </div>
+                
             </div>
         </div>
         <div class="buttons">
