added few more section

--- a/index.html
+++ b/index.html
@@ -18,50 +18,141 @@
     <div class="catch-phrase">
         <h2>Freshly<br>Picked<br>Every Day</h2>
         <div class="rotating-beet">
-            <img src="./media/beet-vector copy.png">
+            <img id="beet-spin" src="./media/beet-vector copy.png">
         </div>
     </div>
     <section class="gallery">
         <div class="buttons">
-            <button class="prev">
-                <i class="fas fa-caret-left"></i>
-            </button>
+            <img src="./media/vectors/arrow-left.png" alt="leaf-button-left">
         </div>
         <div class="slider">
             <div class="wrapper">
                 <div class="slide">
-                    <img src="./media/vectors/beet9.png" >
+                    <img src="./media/vectors/beet9.png" alt="popular meal">
                 </div>
                 <div class="slide">
-                    <img src="./media/vectors/beet8.png">
+                    <img src="./media/vectors/beet8.png" alt="popular meal">
                 </div>
                 <div class="slide">
-                    <img src="./media/vectors/beet7.png">
+                    <img src="./media/vectors/beet7.png" alt="popular meal">
                 </div>
                 <div class="slide">
-                    <img src="./media/vectors/beet6.png">
+                    <img src="./media/vectors/beet6.png" alt="popular meal">
                 </div>
                 <div class="slide">
-                    <img src="./media/vectors/beet5.png">
+                    <img src="./media/vectors/beet5.png" alt="popular meal">
                 </div>
                 <div class="slide">
-                    <img src="./media/vectors/beet4.png">
+                    <img src="./media/vectors/beet4.png" alt="popular meal">
                 </div>
                 <div class="slide">
-                    <img src="./media/vectors/beet3.png">
+                    <img src="./media/vectors/beet3.png" alt="popular meal">
                 </div>
                 <div class="slide">
-                    <img src="./media/vectors/beet2.png">
+                    <img src="./media/vectors/beet2.png" alt="popular meal">
                 </div>
                 
             </div>
         </div>
         <div class="buttons">
-            <button class="prev">
-                <i class="fas fa-caret-right"></i>
-            </button>
+            <img src="./media/vectors/arrow-right.png" alt="leaf-button-right">
         </div>
     </section>
+    <div class="featured-div">
+        <div class="feature-in">
+            <h2>Featured In</h2>
+        </div>
+        <div class="featured-marketing">
+            <img src="./media/vectors/featured-in/buzzfeed.svg" alt="buzzfeed logo">
+            <img src="./media/vectors/featured-in/cosmopolitan.svg" alt="cosmopolitan logo">
+            <img src="./media/vectors/featured-in/food.svg" alt="food magazine logo">
+            <img src="./media/vectors/featured-in/people.svg" alt="people magazine logo">
+        </div>
+    </div>
+    <div class="meals">
+        <div class="meal">
+            <div class="test-about-meal">
+                <h2>MEAL NAME</h2>
+                <p>Meal description goes here.</p>
+            </div>
+            <button class="new-recipe-button">New Recipe</button>
+            <div class="meal-image">
+                <img class="meal-recepie" src="./media/beetroot-3434195_1280.jpg" alt="meal picture">
+            </div>
+        </div>
+        <div class="meal">
+            <div class="test-about-meal">
+                <h2>MEAL NAME</h2>
+                <p>Meal description goes here.</p>
+            </div>
+            <button class="new-recipe-button">New Recipe</button>
+            <div class="meal-image">
+                <img class="meal-recepie" src="./media/beetroot-3434195_1280.jpg" alt="meal picture">
+            </div>
+        </div>
+        <div class="meal">
+            <div class="test-about-meal">
+                <h2>MEAL NAME</h2>
+                <p>Meal description goes here.</p>
+            </div>
+            <button class="new-recipe-button">New Recipe</button>
+            <div class="meal-image">
+                <img class="meal-recepie" src="./media/beetroot-3434195_1280.jpg" alt="meal picture">
+            </div>
+        </div>
+    </div>
+    <div class="video-text">
+        <div class="veggies-video">
+            <video id="veggie-platter" src="./media/plant-platter.mp4" autoplay loop muted></video>
+        </div>
+        <div class="text-over-video">
+            <h2>WE MAKE GOOD FOOD FROM ORGANIC FRESH INGREDIENTS.</h2>
+        </div>
+    </div>
+    <div class="our-dishes">
+        <div class="our-dishes-text-beet">
+            <div class="new-offer-dish">
+                <h2><span>NEW</span> POPULAR MEALS</h2>
+                <p>Bla bla bla bal dkhdjshdjsdhs jkadhjkashd kjahdsjkahdasjhdaskj</p>
+            </div>
+            <img id="beet-spin" src="./media/beet-vector copy.png" alt="beetroot">
+        </div>
+    </div>
+    <div class="location">
+        <div class="location-text">
+            <h2>Come See Us</h2>
+            <hr>
+        </div>
+        <div class="location-destinations">
+            <div class="location-destination">
+                <img src="./media/vectors/location.png" alt="location-logo">
+                <h3>LOS ANGELES</h3>
+                <h4>310-394-3920</h4>
+                <p>4096 Santa Monica Blvd<br>West Hollywood, CA, 90069</p>
+            </div>
+            <div class="location-destination">
+                <img src="./media/vectors/location.png" alt="location-logo">
+                <h3>NEW YORK</h3>
+                <h4>646-354-3221</h4>
+                <p>1046 Grove Street<br>Farmingdale, NY, 11738</p>
+            </div>
+        </div>
+    </div>
+    <footer>
+        <div class="socials">
+            <a href="https://www.instagram.com/yourusername" target="_blank" rel="noopener noreferrer">
+                <i class="fa-brands fa-instagram"></i>
+            </a>
+            <br>
+            <a href="https://www.facebook.com/yourusername" target="_blank" rel="noopener noreferrer">
+                <i class="fa-brands fa-facebook" style="color: #0d95fd;"></i>
+            </a>
+            <br>
+            <a href="https://www.linkedin.com/in/luka-pavlovski-02738a263/" target="_blank" rel="noopener noreferrer">
+                <i class="fa-brands fa-linkedin"></i>
+            </a>
+        </div>
+    </footer>
     
 </body>
 </html>
