--- a/index.html
+++ b/index.html
@@ -139,18 +139,11 @@
         </div>
     </div>
     <footer>
+        <h4>Check our socials</h4>
         <div class="socials">
-            <a href="https://www.instagram.com/yourusername" target="_blank" rel="noopener noreferrer">
-                <i class="fa-brands fa-instagram"></i>
-            </a>
-            <br>
-            <a href="https://www.facebook.com/yourusername" target="_blank" rel="noopener noreferrer">
-                <i class="fa-brands fa-facebook" style="color: #0d95fd;"></i>
-            </a>
-            <br>
-            <a href="https://www.linkedin.com/in/luka-pavlovski-02738a263/" target="_blank" rel="noopener noreferrer">
-                <i class="fa-brands fa-linkedin"></i>
-            </a>
+            <a href="https://www.facebook.com/"><img src="./media/vectors/social/fb.png" alt="facebook logo"></a>
+            <a href="https://www.instagram.com/"><img src="./media/vectors/social/insta.png" alt="facebook logo"></a>
+            <a href="https://x.com/?lang=en"><img src="./media/vectors/social/x.png" alt="facebook logo"></a>
         </div>
     </footer>
     
