styled header in css

--- a/index.html
+++ b/index.html
@@ -9,64 +9,66 @@
     <title>Beet It Bistro</title>
 </head>
 <body>
-    <header class="header">
-        <h3>Menu</h3>
-        <h3>Find Us</h3>
-        <h1>Beet It Bistro</h1>
-        <button>Contact us</button>
-    </header>
-    <div class="catch-phrase">
-        <h2>Freshly<br>Picked<br>Every Day</h2>
-        <div class="rotating-beet">
-            <img id="beet-spin" src="./media/beet-vector copy.png">
-        </div>
-    </div>
-    <section class="gallery">
-        <div class="buttons">
-            <img src="./media/vectors/arrow-left.png" alt="leaf-button-left">
-        </div>
-        <div class="slider">
-            <div class="wrapper">
-                <div class="slide">
-                    <img src="./media/vectors/beet9.png" alt="popular meal">
-                </div>
-                <div class="slide">
-                    <img src="./media/vectors/beet8.png" alt="popular meal">
-                </div>
-                <div class="slide">
-                    <img src="./media/vectors/beet7.png" alt="popular meal">
-                </div>
-                <div class="slide">
-                    <img src="./media/vectors/beet6.png" alt="popular meal">
-                </div>
-                <div class="slide">
-                    <img src="./media/vectors/beet5.png" alt="popular meal">
-                </div>
-                <div class="slide">
-                    <img src="./media/vectors/beet4.png" alt="popular meal">
-                </div>
-                <div class="slide">
-                    <img src="./media/vectors/beet3.png" alt="popular meal">
-                </div>
-                <div class="slide">
-                    <img src="./media/vectors/beet2.png" alt="popular meal">
-                </div>
-                
+    <div class="wrapper-beet">
+        <img id="background-img" src="./media/back1.png" alt="beet">
+        <header class="header">
+            <h3>Menu</h3>
+            <h3>Find Us</h3>
+            <h1>Beet It Bistro</h1>
+            <button>Contact us</button>
+        </header>
+        <div class="catch-phrase">
+            <h2>Freshly<br>Picked<br>Every Day</h2>
+            <div class="rotating-beet">
+                <img id="beet-spin" src="./media/beet-vector copy.png">
             </div>
         </div>
-        <div class="buttons">
-            <img src="./media/vectors/arrow-right.png" alt="leaf-button-right">
-        </div>
-    </section>
-    <div class="featured-div">
-        <div class="feature-in">
-            <h2>Featured In</h2>
-        </div>
-        <div class="featured-marketing">
-            <img src="./media/vectors/featured-in/buzzfeed.svg" alt="buzzfeed logo">
-            <img src="./media/vectors/featured-in/cosmopolitan.svg" alt="cosmopolitan logo">
-            <img src="./media/vectors/featured-in/food.svg" alt="food magazine logo">
-            <img src="./media/vectors/featured-in/people.svg" alt="people magazine logo">
+        <section class="gallery">
+            <div class="buttons">
+                <img src="./media/vectors/arrow-left.png" alt="leaf-button-left">
+            </div>
+            <div class="slider">
+                <div class="wrapper">
+                    <div class="slide">
+                        <img src="./media/vectors/beet9.png" alt="popular meal">
+                    </div>
+                    <div class="slide">
+                        <img src="./media/vectors/beet8.png" alt="popular meal">
+                    </div>
+                    <div class="slide">
+                        <img src="./media/vectors/beet7.png" alt="popular meal">
+                    </div>
+                    <div class="slide">
+                        <img src="./media/vectors/beet6.png" alt="popular meal">
+                    </div>
+                    <div class="slide">
+                        <img src="./media/vectors/beet5.png" alt="popular meal">
+                    </div>
+                    <div class="slide">
+                        <img src="./media/vectors/beet4.png" alt="popular meal">
+                    </div>
+                    <div class="slide">
+                        <img src="./media/vectors/beet3.png" alt="popular meal">
+                    </div>
+                    <div class="slide">
+                        <img src="./media/vectors/beet2.png" alt="popular meal">
+                    </div>
+                </div>
+            </div>
+            <div class="buttons">
+                <img src="./media/vectors/arrow-right.png" alt="leaf-button-right">
+            </div>
+        </section>
+        <div class="featured-div">
+            <div class="feature-in">
+                <h2>Featured In</h2>
+            </div>
+            <div class="featured-marketing">
+                <img src="./media/vectors/featured-in/buzzfeed.svg" alt="buzzfeed logo">
+                <img src="./media/vectors/featured-in/cosmopolitan.svg" alt="cosmopolitan logo">
+                <img src="./media/vectors/featured-in/food.svg" alt="food magazine logo">
+                <img src="./media/vectors/featured-in/people.svg" alt="people magazine logo">
+            </div>
         </div>
     </div>
     <div class="meals">
