finished hero pert

--- a/index.html
+++ b/index.html
@@ -5,12 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="./main.css">
     <title>Beet It Bistro</title>
 </head>
 <body>
     <div class="wrapper-beet">
-        <img id="background-img" src="./media/back1.png" alt="beet">
         <header class="header">
             <h3>Menu</h3>
             <h3>Find Us</h3>
@@ -18,10 +21,10 @@
             <button>Contact us</button>
         </header>
         <div class="catch-phrase">
-            <h2>Freshly<br>Picked<br>Every Day</h2>
             <div class="rotating-beet">
                 <img id="beet-spin" src="./media/beet-vector copy.png">
             </div>
+            <h2><span class="freshly-span">Freshly</span><br><span class="picked-span">Picked</span><br><span class="every-day-span">Every Day</span></h2>
         </div>
         <section class="gallery">
             <div class="buttons">
