featured in finished

--- a/index.html
+++ b/index.html
@@ -27,9 +27,7 @@
             <h2><span class="freshly-span">Freshly</span><br><span class="picked-span">Picked</span><br><span class="every-day-span">Every Day</span></h2>
         </div>
         <section class="gallery">
-            <div class="buttons">
-                <img src="./media/vectors/arrow-left.png" alt="leaf-button-left">
-            </div>
+
             <div class="slider">
                 <div class="wrapper">
                     <div class="slide">
@@ -57,9 +55,10 @@
                         <img src="./media/vectors/beet2.png" alt="popular meal">
                     </div>
                 </div>
-            </div>
-            <div class="buttons">
-                <img src="./media/vectors/arrow-right.png" alt="leaf-button-right">
+                <div class="buttons">
+                    <img id="left-button" src="./media/vectors/arrow-left.png" alt="leaf-button-left">
+                    <img id="right-button" src="./media/vectors/arrow-right.png" alt="leaf-button-right">
+                </div>
             </div>
         </section>
         <div class="featured-div">
