--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="./main.css">
+     <script src="./main.js" type="module" defer></script>
     <title>Beet It Bistro</title>
 </head>
 <body>
