deleted the old html and css for the popular food, did html and css

--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
             </div>
             <h2><span class="freshly-span">Freshly</span><br><span class="picked-span">Picked</span><br><span class="every-day-span">Every Day</span></h2>
         </div>
-        <section class="gallery">
-
+        <!-- <section class="gallery">
             <div class="slider">
                 <div class="wrapper">
                     <div class="slide">
@@ -61,7 +60,45 @@
                     <img id="right-button" src="./media/vectors/arrow-right.png" alt="leaf-button-right">
                 </div>
             </div>
-        </section>
+        </section> -->
+
+
+<div class="slider">
+    <div class="list">
+        <div class="item">
+            <img src="./media/vectors/beet9.png" alt="popular meal">
+        </div>
+        <div class="item">
+            <img src="./media/vectors/beet8.png" alt="popular meal">
+        </div>
+        <div class="item">
+            <img src="./media/vectors/beet7.png" alt="popular meal">
+        </div>
+        <div class="item">
+            <img src="./media/vectors/beet6.png" alt="popular meal">
+        </div>
+        <div class="item">
+            <img src="./media/vectors/beet5.png" alt="popular meal">
+        </div>
+        <div class="item">
+            <img src="./media/vectors/beet4.png" alt="popular meal">
+        </div>
+        <div class="item">
+            <img src="./media/vectors/beet3.png" alt="popular meal">
+        </div>
+        <div class="item">
+            <img src="./media/vectors/beet2.png" alt="popular meal">
+        </div>
+    </div>
+    <div class="buttons">
+        <img id="prev" src="./media/vectors/arrow-left.png" alt="leaf-button-left">
+        <img id="next" src="./media/vectors/arrow-right.png" alt="leaf-button-right">
+    </div>
+</div>
+
+
+
+
         <div class="featured-div">
             <div class="feature-in">
                 <h2>Featured In</h2>
