finished recipes with a button in css

--- a/index.html
+++ b/index.html
@@ -59,10 +59,6 @@
                 <img id="next" src="./media/vectors/arrow-right.png" alt="leaf-button-right">
             </div>
         </div>
-
-
-
-
         <div class="featured-div">
             <div class="feature-in">
                 <h2>Featured In</h2>
@@ -75,11 +71,12 @@
             </div>
         </div>
     </div>
+    
     <div class="meals">
         <div class="meal">
             <div class="test-about-meal">
                 <h2>MEAL NAME</h2>
-                <p>Meal description goes here.</p>
+                <p>Meal description goes here.Meal description goes here.Meal description goes here.Meal description goes here.Meal description goes here.</p>
             </div>
             <button class="new-recipe-button">New Recipe</button>
             <div class="meal-image">
@@ -89,8 +86,7 @@
         <div class="meal">
             <div class="test-about-meal">
                 <h2>MEAL NAME</h2>
-                <p>Meal description goes here.</p>
-            </div>
+                <p>Meal description goes here.Meal description goes here.Meal description goes here.Meal description goes here.Meal description goes here.</p>            </div>
             <button class="new-recipe-button">New Recipe</button>
             <div class="meal-image">
                 <img class="meal-recepie" src="./media/beetroot-3434195_1280.jpg" alt="meal picture">
@@ -99,8 +95,7 @@
         <div class="meal">
             <div class="test-about-meal">
                 <h2>MEAL NAME</h2>
-                <p>Meal description goes here.</p>
-            </div>
+                <p>Meal description goes here.Meal description goes here.Meal description goes here.Meal description goes here.Meal description goes here.</p>            </div>
             <button class="new-recipe-button">New Recipe</button>
             <div class="meal-image">
                 <img class="meal-recepie" src="./media/beetroot-3434195_1280.jpg" alt="meal picture">
