added register box in the pop up modal

--- a/index.html
+++ b/index.html
@@ -24,12 +24,36 @@
         <!-- MODAL  appears after scrolling down-->
         <div class="modal-whole">
             <button class="x-modal">X</button>
-            <div class="modal-wrapper">
+            <div class="modal-wrapper hidden">
                 <h2>SIGNUP NOW</h2>
                 <p>and get</p>
                 <h1>$10 OFF!</h1>
                 <p> on your first order!</p>
                 <button class="sign-up">SignUp</button>
+            </div>
+            <div class="signup">
+                <div class="signup-box">
+                    <h1>Sign Up</h1>
+                    <h4>It only takes a minute.</h4>
+                    <form class="register-form">
+                        <label>First Name</label>
+                        <input type="text" placeholder="" id="first-name-register" class="register-form-inputs">
+                        <label>Last Name</label>
+                        <input type="text" placeholder="" id="last-name-register" class="register-form-inputs">
+                        <label>Email</label>
+                        <input type="email" placeholder="" id="email-register" class="register-form-inputs">
+                        <label>Password</label>
+                        <input type="password" placeholder="" id="password-register" class="register-form-inputs">
+                        <label>Confirm Password</label>
+                        <input type="password" placeholder="" id="password-register-confirm" class="register-form-inputs">
+                        <input type="button" value="Submit" id="submit-register">
+                    </form>
+                    <p>By clicking the Sign Up Button, you agree to our<br>
+                    <a href="https://www.bankofamerica.com/online-banking/service-agreement.go" target="_blank">
+                        Terms and Conditions</a> and 
+                    <a href="https://www.bankofamerica.com/security-center/privacy-overview/" target="_blank">Privacy Policy</a> </p>
+                </div>
+                <p class="login-2">Already have an account ? <a href="../login.html">Login here</a> </p>
             </div>
         </div>
 
