finished signup in css

--- a/index.html
+++ b/index.html
@@ -34,7 +34,6 @@
             <div class="signup">
                 <div class="signup-box">
                     <h1>Sign Up</h1>
-                    <h4>It only takes a minute.</h4>
                     <form class="register-form">
                         <label>First Name</label>
                         <input type="text" placeholder="" id="first-name-register" class="register-form-inputs">
@@ -46,7 +45,7 @@
                         <input type="password" placeholder="" id="password-register" class="register-form-inputs">
                         <label>Confirm Password</label>
                         <input type="password" placeholder="" id="password-register-confirm" class="register-form-inputs">
-                        <input type="button" value="Submit" id="submit-register">
+                        <button id="submit-register">Submit</button>
                     </form>
                     <p>By clicking the Sign Up Button, you agree to our<br>
                     <a href="https://www.bankofamerica.com/online-banking/service-agreement.go" target="_blank">
