fetched the vegan recipes api

--- a/index.html
+++ b/index.html
@@ -22,16 +22,16 @@
             <button>Contact us</button>
         </header>
         <!-- MODAL  appears after scrolling down-->
-        <div class="modal-whole">
+        <div class="modal-whole hidden">
             <button class="x-modal">X</button>
-            <div class="modal-wrapper hidden">
+            <div class="modal-wrapper ">
                 <h2>SIGNUP NOW</h2>
                 <p>and get</p>
                 <h1>$10 OFF!</h1>
                 <p> on your first order!</p>
                 <button class="sign-up">SignUp</button>
             </div>
-            <div class="signup">
+            <div class="signup hidden">
                 <div class="signup-box">
                     <h1>Sign Up</h1>
                     <form class="register-form">
@@ -52,7 +52,6 @@
                         Terms and Conditions</a> and 
                     <a href="https://www.bankofamerica.com/security-center/privacy-overview/" target="_blank">Privacy Policy</a> </p>
                 </div>
-                <p class="login-2">Already have an account ? <a href="../login.html">Login here</a> </p>
             </div>
         </div>
 
@@ -152,7 +151,7 @@
     
     <div class="our-dishes">
         <div class="new-offer-dish">
-            <h2><span>NEW</span> POPULAR COMBO</h2>
+            <h2><span>$30 NEW</span> POPULAR COMBO</h2>
             <p>Beet Burger + Beet & Veggie Shake + Farro Chia Pudding<br>
                 <hr>
                 For just $30, this combo provides a balanced meal with protein, fiber, healthy fats, and antioxidants. It’s satisfying, delicious, and perfect for a plant-based lifestyle.</p>
