made when you scroll down, and modal will open, then I connected the X button to close it, and signUp button to open the registration form

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
                 </div>
             </div>
         </div>
+<!-- MODAL ENDS HERE -->
 
         <div class="catch-phrase">
             <div class="rotating-beet">
