--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 <body>
     <div class="wrapper-beet">
         <header class="header">
-            <h3>Menu</h3>
-            <h3>Find Us</h3>
+            <h3 class="menu">Menu</h3>
+            <h3 class="find-us">Find Us</h3>
             <h1>Beet It Bistro</h1>
             <button>Contact us</button>
         </header>
